--- a/src/code/interface.css
+++ b/src/code/interface.css
@@ -2,6 +2,10 @@
          INTERFACE IMPROVEMENTS
 ********************************************/
 
+:root {
+  scrollbar-color: unset;
+}
+
 *::-webkit-scrollbar {
   width: var(--ls-scrollbar-width);
   height: var(--ls-scrollbar-width);
